--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -3,8 +3,6 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 26
 
-
-
     defaultConfig {
         minSdkVersion 15
         targetSdkVersion 26
@@ -13,6 +11,11 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        javaCompileOptions {
+            annotationProcessorOptions {
+                includeCompileClasspath true
+            }
+        }
     }
 
     buildTypes {
@@ -38,6 +41,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:0.5'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
 
-    compile 'com.google.code.gson:gson:2.6.2'
-    compile 'org.xutils:xutils:3.5.0'
+    implementation 'com.google.code.gson:gson:2.6.2'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
+    implementation 'io.realm:realm-android:0.84.1'
 }
