--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -36,10 +36,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
+    implementation 'com.android.support:appcompat-v7:26.0.0'
 
     implementation 'com.google.code.gson:gson:2.6.2'
 
