--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -36,11 +36,11 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    implementation 'com.android.support:appcompat-v7:26.0.0'
+    implementation 'com.android.support:appcompat-v7:26.0.2'
 
-    implementation 'com.google.code.gson:gson:2.6.2'
+    api 'com.google.code.gson:gson:2.6.2'
 
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
-    implementation 'io.realm:realm-android:0.84.1'
-    implementation 'com.wang.avi:library:2.1.3'
+    api 'com.squareup.okhttp3:okhttp:3.11.0'
+    api 'io.realm:realm-android:0.84.1'
+    api 'com.wang.avi:library:2.1.3'
 }
