优化日志拦截器

--- a/baselibrary/build.gradle
+++ b/baselibrary/build.gradle
@@ -22,6 +22,10 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("boolean", "SHOW_LOG", "false")
+        }
+        debug {
+            buildConfigField("boolean", "SHOW_LOG", "true")
         }
     }
 
